tests/baselines/reference/cannotInvokeNewOnErrorExpression.errors.txt
cannotInvokeNewOnErrorExpression.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
cannotInvokeNewOnErrorExpression.ts(5,15): error TS2339: Property 'ClassA' does not exist on type 'typeof M'.
cannotInvokeNewOnErrorExpression.ts(5,22): error TS1011: An element access expression should take an argument.


==== cannotInvokeNewOnErrorExpression.ts (3 errors) ====
    module M
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    {
        class ClassA {}
    }
    var t = new M.ClassA[];
                  ~~~~~~
!!! error TS2339: Property 'ClassA' does not exist on type 'typeof M'.
                         
!!! error TS1011: An element access expression should take an argument.